[package]
name = "horst3"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
description = "S3 caching library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nicholasbishop/horst3"

[dependencies]
actix-files = "0.1"
actix-web = "1.0"
dirs = "2.0"
lockfile = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utime = "0.2"

[dev-dependencies]
tempfile = "3.1"
